add exports to non public API used by darcula