@@ -73,6 +73,10 @@ def defineMacBuildTasks =  { architecture ->
      '--java-options', '-Xdock:name=Freeplane',
      '--java-options', '--add-exports', 
      '--java-options', 'java.desktop/com.apple.eawt=ALL-UNNAMED',
+     '--java-options', '--add-exports', 
+     '--java-options', 'java.desktop/sun.awt=ALL-UNNAMED',
+     '--java-options', '--add-exports', 
+     '--java-options', 'java.desktop/sun.swings=ALL-UNNAMED',
    	 '--input', 'build/macosapp/input',
      '--main-class', 'org.freeplane.launcher.Launcher',
   	 '--main-jar', 'freeplanelauncher.jar',
